// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/unified-share-modal/ContactsField render should have scrollable dropdown if contacts > 5 1`] = `
<PillSelectorDropdown
  allowCustomPills={true}
  allowInvalidPills={false}
  className="scrollable"
  disabled={false}
  error=""
  inputProps={
    Object {
      "autoFocus": true,
      "onChange": [Function],
    }
  }
  label={
    <FormattedMessage
      defaultMessage="Invite People"
      id="boxui.unifiedShare.inviteFieldLabel"
    />
  }
  onBlur={[Function]}
  onInput={[Function]}
  onPillCreate={[Function]}
  onRemove={[MockFunction]}
  onSelect={[MockFunction]}
  parseItems={[Function]}
  placeholder=""
  selectedOptions={Array []}
  selectorOptions={
    Array [
      Object {
        "email": "x@example.com",
        "id": "12345",
        "isExternalUser": false,
        "text": "X User",
        "type": "group",
        "value": "x@example.com",
      },
      Object {
        "email": "y@example.com",
        "id": "23456",
        "isExternalUser": true,
        "text": "Y User",
        "type": "user",
        "value": "y@example.com",
      },
      Object {
        "email": "z@example.com",
        "id": "34567",
        "isExternalUser": false,
        "text": "Z User",
        "type": "user",
        "value": "z@example.com",
      },
      Object {
        "email": "a@example.com",
        "id": "12",
        "isExternalUser": true,
        "text": "a b",
        "type": "user",
        "value": "a@example.com",
      },
      Object {
        "email": "b@example.com",
        "id": "13",
        "isExternalUser": false,
        "text": "a b",
        "type": "user",
        "value": "b@example.com",
      },
      Object {
        "email": "c@example.com",
        "id": "14",
        "isExternalUser": true,
        "text": "a c",
        "type": "user",
        "value": "c@example.com",
      },
      Object {
        "email": "d@example.com",
        "id": "14",
        "isExternalUser": false,
        "text": "a d",
        "type": "user",
        "value": "d@example.com",
      },
      Object {
        "email": "e@example.com",
        "id": "14",
        "isExternalUser": true,
        "text": "a e",
        "type": "user",
        "value": "e@example.com",
      },
    ]
  }
  shouldClearUnmatchedInput={false}
  shouldSetActiveItemOnOpen={false}
  validateForError={[MockFunction]}
  validator={[MockFunction]}
>
  <ContactDatalistItem
    key="12345"
    name="X User"
    subtitle="x@example.com"
    title="X User"
  />
  <ContactDatalistItem
    key="23456"
    name="Y User"
    subtitle="y@example.com"
    title="Y User"
  />
  <ContactDatalistItem
    key="34567"
    name="Z User"
    subtitle="z@example.com"
    title="Z User"
  />
  <ContactDatalistItem
    key="12"
    name="a b"
    subtitle="a@example.com"
    title="a b"
  />
  <ContactDatalistItem
    key="13"
    name="a b"
    subtitle="b@example.com"
    title="a b"
  />
  <ContactDatalistItem
    key="14"
    name="a c"
    subtitle="c@example.com"
    title="a c"
  />
  <ContactDatalistItem
    key="14"
    name="a d"
    subtitle="d@example.com"
    title="a d"
  />
  <ContactDatalistItem
    key="14"
    name="a e"
    subtitle="e@example.com"
    title="a e"
  />
</PillSelectorDropdown>
`;

exports[`features/unified-share-modal/ContactsField render should render default component 1`] = `
<PillSelectorDropdown
  allowCustomPills={true}
  allowInvalidPills={false}
  className=""
  disabled={false}
  error=""
  inputProps={
    Object {
      "autoFocus": true,
      "onChange": [Function],
    }
  }
  label={
    <FormattedMessage
      defaultMessage="Invite People"
      id="boxui.unifiedShare.inviteFieldLabel"
    />
  }
  onBlur={[Function]}
  onInput={[Function]}
  onPillCreate={[Function]}
  onRemove={[MockFunction]}
  onSelect={[MockFunction]}
  parseItems={[Function]}
  placeholder=""
  selectedOptions={
    Array [
      Object {
        "email": "x@example.com",
        "id": "12345",
        "isExternalUser": false,
        "text": "X User",
        "type": "group",
        "value": "x@example.com",
      },
      Object {
        "email": "y@example.com",
        "id": "23456",
        "isExternalUser": true,
        "text": "Y User",
        "type": "user",
        "value": "y@example.com",
      },
      Object {
        "email": "z@example.com",
        "id": "34567",
        "isExternalUser": false,
        "text": "Z User",
        "type": "user",
        "value": "z@example.com",
      },
    ]
  }
  selectorOptions={Array []}
  shouldClearUnmatchedInput={false}
  shouldSetActiveItemOnOpen={false}
  validateForError={[MockFunction]}
  validator={[MockFunction]}
/>
`;
